--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,13 +17,16 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
-  firebase_core: ^0.4.0+6
   flutter:
     sdk: flutter
 
   redux: ^3.0.0
   flutter_redux: ^0.5.3
 
+  firebase_core: ^0.4.0+6
+  firebase_auth: ^0.11.1+7
+
+  flutter_spinkit: ^3.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
