creates documents on register.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -28,3 +28,11 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.google.firebase') {
+            details.useVersion "15.+"
+        }
+    }
+}
