--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,23 +20,32 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Redux
   redux: ^3.0.0
   flutter_redux: ^0.5.3
 
+  # Firebase
   firebase_core: ^0.4.0+6
   firebase_auth: ^0.11.1+7
   cloud_firestore: ^0.12.5+2
   cloud_functions: ^0.3.0
+  firebase_storage: ^3.0.3
+  firebase_database: ^3.0.2
 
+  # Maps
   google_maps_flutter: ^0.5.13
   location: ^2.0.0
   geoflutterfire: ^2.0.0
 
-  firebase_database: ^3.0.2
-
-
-
+  # Loading screen
   flutter_spinkit: ^3.1.0
+
+  # Image upload
+  image_picker: ^0.6.0+15
+
+  # Permissions
+  permission_handler: ^3.1.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
